--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
       }
       scriptLoaded = true;
       var scriptTag = document.createElement('script');
-      scriptTag.src = 'main.dart.js';
+      scriptTag.src = 'PostApi.dart.js';
       scriptTag.type = 'application/javascript';
       document.body.append(scriptTag);
     }
